# FieldOpt

./: .gitignore  .gitmodules  CMakeLists.txt  COMPILING.md  CONTRIBUTING.md  Doxyfile  README.md  command_line_build.sh  copyright_template  create_release.sh  jobscript.sh  jobscript_baseline.sh  jobscript_batch_analysis.sh  jobscript_batch_part1.sh  jobscript_batch_part2.sh  jobscript_batch_part3.sh  jobscript_batch_part4.sh  jobscript_bath_part1.sh  jobscript_precise_part1.sh  jobscript_precise_part2.sh  jobscript_precise_part3.sh  kongull.README  load_kongull_modules.sh  results.txt  run_program.sh  run_tests.py  run_tests.sh
FieldOpt/: .gitignore  CMakeLists-temp-agchitu.txt  CMakeLists.txt  DebugMsg.cmake  FieldOpt.pro  FindEigen3.cmake  GetSysInfo.cmake  InclDirDbg.cmake  MaurConfig.cmake  command_line_build.sh  compile-fieldopt-cmake.sh  compile-wic-rixx-cmake.sh  defaults.pri
FieldOpt/AdgprsResultsReader/: AdgprsResultsReader.pro  CMakeLists.txt  adgprs_results_reader.cpp  adgprs_results_reader.h  json_summary_reader.cpp  json_summary_reader.h
FieldOpt/AdgprsResultsReader/tests/: test_adgprs_results_reader.cpp  test_json_summary_reader.cpp
FieldOpt/Console/: Console.pro  batchlogger.cpp  batchlogger.h  broker.cpp  broker.h  main.cpp  masterrunner.cpp  masterrunner.h  parallelprinter.cpp  parallelprinter.h  resultslogger.cpp  resultslogger.h  simulationlauncher.cpp  simulationlauncher.h  summaryprinter.cpp  summaryprinter.h
FieldOpt/Console/transferobjects/: modelperturbation.cpp  modelperturbation.h  perturbation.cpp  perturbation.h  result.cpp  result.h  simulationresults.cpp  simulationresults.h
FieldOpt/ConstraintMath/: CMakeLists.txt  README.md  Sources.cmake
FieldOpt/ConstraintMath/tests/: test_domain_boundary.cpp  test_well_constraint_projections.cpp  well_constraint_projections_tests.cpp
FieldOpt/ConstraintMath/well_constraint_projections/: well_constraint_projections.cpp  well_constraint_projections.h
FieldOpt/ERTWrapper/: .gitignore  CMakeLists.txt  ERTWrapper.pro  README.md  Sources.cmake  eclgridreader.cpp  eclgridreader.h  eclgridrotator.cpp  eclgridrotator.h  eclsummaryreader.cpp  eclsummaryreader.h  ertwrapper_exceptions.h  main_gridrotator.cpp
FieldOpt/ERTWrapper/tests/: test_eclgridreader.cpp  test_eclgridrotator.cpp  test_eclsummaryreader.cpp
FieldOpt/GSSOptimizer/: GSSOptimizer.pro  gssoptimizer.cpp  gssoptimizer.h  gssoptimizer_global.h
FieldOpt/GSSOptimizerTests/: GSSOptimizerTests.pro  tst_gssoptimizerteststest.cpp
FieldOpt/GTest/: CMakeLists.txt  GTest.pro  README.md  gtest_main.cpp
FieldOpt/GTest/AdgprsResultsReader/: test_adgprs_results_reader.cpp  test_json_summary_reader.cpp
FieldOpt/GTest/ERTWrapper/: test_eclgridreader.cpp  test_eclsummaryreader.cpp
FieldOpt/GTest/Model/: test_fixture_model_base.h  test_model.cpp
FieldOpt/GTest/Optimization/: test_case.cpp  test_case_handler.cpp  test_fixture_case.h  test_fixture_optimizer.h
FieldOpt/GTest/Runner/: test_bookkeeper.cpp
FieldOpt/Hdf5SummaryReader/: CMakeLists.txt  Sources.cmake  hdf5_summary_reader.cpp  hdf5_summary_reader.h
FieldOpt/Hdf5SummaryReader/tests/: test_hdf5_summary_reader.cpp
FieldOpt/Model/: CMakeLists.txt  Model.pro  README.md  Sources.cmake  model.cpp  model.h  model_synchronization_object.cpp  model_synchronization_object.h
FieldOpt/Model/cpp-spline/: README.md
FieldOpt/Model/objective/: objective.h  weightedsum.cpp  weightedsum.h
FieldOpt/Model/properties/: binary_property.cpp  binary_property.h  continous_property.cpp  continous_property.h  discrete_property.cpp  discrete_property.h  property.cpp  property.h  property_exceptions.h  variable_property_container.cpp  variable_property_container.h  variable_property_handler.cpp  variable_property_handler.h
FieldOpt/Model/reservoir/: reservoir.cpp  reservoir.h  reservoir_exceptions.h
FieldOpt/Model/results/: eclresults.cpp  eclresults.h  results.h  results_exceptions.h
FieldOpt/Model/schedule/: schedule.cpp  schedule.h
FieldOpt/Model/tests/: test_fixture_model_base.h  test_model.cpp  test_resource_grids.h  test_resource_model.h  (+2 more)
FieldOpt/Model/variables/: variable.h  (+12 more)
FieldOpt/Optimization/: CMakeLists.txt  Optimization.pro  README.md  Sources.cmake  case.cpp  case.h  case_handler.cpp  case_handler.h  case_transfer_object.cpp  case_transfer_object.h  hybrid_optimizer.cpp  hybrid_optimizer.h  normalizer.cpp  normalizer.h  optimization_exceptions.h  optimizer.cpp  optimizer.h
FieldOpt/Reservoir/: CMakeLists.txt  Sources.cmake  reservoir.cpp  reservoir.h  reservoir_exceptions.h
FieldOpt/Runner/: CMakeLists.txt  README.md  Runner.pro  Sources.cmake  bookkeeper.cpp  bookkeeper.h  loggable.hpp  logger.cpp  logger.h  main.cpp  runtime_settings.cpp  runtime_settings.h
FieldOpt/Settings/: CMakeLists.txt  README.md  Sources.cmake  deck_parser.cpp  deck_parser.h  ensemble.cpp  ensemble.h  helpers.hpp  model.cpp  model.h  optimization.cpp  optimization.h  optimizer.cpp  optimizer.h  paths.cpp  paths.h  settings.cpp  settings.h  settings_exceptions.h  simulator.cpp  simulator.h  trajectory_importer.cpp  trajectory_importer.h
FieldOpt/Simulation/: CMakeLists.txt  README.md  Simulation.pro  Sources.cmake  simulator.h
FieldOpt/Utilities/: CMakeLists.txt  README.md  Sources.cmake  Utilities.pro  colors.hpp  debug.hpp  execution.hpp  filehandling.hpp  math.hpp  printer.hpp  random.hpp  stringhelpers.hpp  system.hpp  time.hpp  verbosity.h
FieldOpt/WellIndexCalculation/: .gitignore  CMakeLists.txt  README.md  Sources.cmake  WellDefinition.h  intersected_cell.cpp  intersected_cell.h  main.cpp  main.hpp  resinxx.cmake  wellindexcalculator.cpp  wellindexcalculator.h  wicalc_rixx.cpp  wicalc_rixx.h
FieldOpt/WellIndexCalculator/: CMakeLists.txt  README.md  intersected_cell.cpp  intersected_cell.h  main.cpp  main.hpp  wellindexcalculator.cpp  wellindexcalculator.h
FieldOpt/src/: src.pro
FieldOpt/tests/: autotest.h  main.cpp  testbeggsbrillcalculator.cpp  testbeggsbrillcalculator.h  testconstraint.cpp  testconstraint.h  tests.pro  teststream.cpp  teststream.h  testvariable.cpp  testvariable.h
(+1327 files in other folders)
